tests/syntax_tests/data/parsing/errors/other/expected/regionMissingComma.res.txt

  Syntax error!
  syntax_tests/data/parsing/errors/other/regionMissingComma.res:2:31

  1 │ external make: (
  2 │   ~style: ReactDOMRe.Style.t=?.
  3 │   ~image: bool=?,
  4 │ ) => React.element = "ModalContent"

  Did you forget a `)` here?

external make : ?style:ReactDOMRe.Style.t -> [%%rescript.typehole] (a:1)
;;image
;;(= bool (? [%%rescript.exprhole]))
;;(= React.element "ModalContent")
type nonrec 'extraInfo student = {
  name: string ;
  age: int }
;;otherInfo
;;extraInfo